# Yasos-Biba

./: CMakeLists.txt  README.md  main.cpp
controller/: location_controller.cpp  location_controller.h  player_controller.cpp  player_controller.h
controllers/: hero.cpp  hero.h  target.cpp  target.h  triangle.cpp  triangle.h
menu/: menu.cpp  menu.h
model/: bullet.cpp  bullet.h  character_model.cpp  character_model.h  characteristics.cpp  characteristics.h  location_model.cpp  location_model.h  sprite.cpp  sprite.h
view/: customscene.cpp  customscene.h  scene.cpp  scene.h  view.cpp  view.h  widget.cpp  widget.h  widget.ui
